updated testing for check